syntax = "proto3";

package tgvalidatord;

import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

import "google/api/annotations.proto";

import "approvers.proto";
import "blockchain-service.proto";
import "currency.proto";
import "metadata.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "wallet.proto";

option java_package = "com.taurushq.sdk.protect.proto.v1";

message TnParticipantSettings {
  repeated string interactingAllowedCountries = 1;
  string status = 2;
  repeated TnAllowedParticipant interactingAllowedParticipants = 3;
  google.protobuf.Timestamp termsAndConditionsAcceptedAt = 4;
}

message TnAllowedParticipant {
  string id = 1;
  string name = 2;
  string status = 3;
}

message TnParticipant {
  string id = 1;

  string name = 2;
  string legalAddress = 3;
  string country = 4;
  string logoBase64 = 5;
  string publicKey = 6;

  // base64 of a json string containing the shield version and a
  // signature from the participant private key of selected attribute of the 'Participant' payload
  string shield = 7;

  google.protobuf.Timestamp originRegistrationDate = 8;
  google.protobuf.Timestamp originDeletionDate = 9;

  google.protobuf.Timestamp createdAt = 10;
  google.protobuf.Timestamp updatedAt = 11;

  TnParticipantDetails details = 12;
  repeated BlockConfirmations blockConfirmations = 13;
  uint64 ownedSharedAddressesCount = 14 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) =
    {description: "Count of shared addresses where the participant is the owner.";}
  ];
  uint64 targetedSharedAddressesCount = 15 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) =
    {description: "Count of shared addresses where the participant is the target.";}
  ];

  string outgoingTotalPledgesValuationBaseCurrency = 16 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) =
    {description: "Total valuation of all outgoing pledges in base currency in main unit (ex. CHF).";}
  ];

  string incomingTotalPledgesValuationBaseCurrency = 17 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) =
    {description: "Total valuation of all incoming pledges in base currency in main unit (ex. CHF).";}
  ];
  string publicSubname = 18;
  string legalEntityIdentifier = 19;
  repeated TnParticipantAttribute attributes = 20;
  string status = 21;
  repeated TnLendingOffer tnLendingOffers = 22;

  DefaultSharedAddresses defaultSharedAddresses = 23 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) =
    {description: "Default addresses destination";}
  ];
}

message TnParticipantAttribute {
  string id = 1;
  string key = 2;
  string value = 3;
  string owner = 4;
  string type = 5;
  string subtype = 6;
  string contentType = 7;
  bool isTaurusNetworkShared = 8;
}

message BlockConfirmations {
  string blockchain = 1;
  string network = 2;
  uint64 confirmationsThreshold = 3;
}

message DefaultSharedAddress {
  string blockchain = 1;
  string network = 2;
  string sharedAddressID = 3;
}

message DefaultSharedAddresses {
  repeated DefaultSharedAddress outgoingDefaultSharedAddresses = 1[
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) =
    {description: "The TN shared addresses designated by me to be shared to other participants"}
  ];
  repeated DefaultSharedAddress incomingDefaultSharedAddresses = 2[
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) =
    {description: "The TN shared addresses designated by other participant to share to me"}
  ];
}

message TnParticipantDetails {
  repeated TnContactPerson contactPersons = 1;
  repeated TnParticipantAttributeSpecification attributesSpecifications = 2;
  repeated BlockchainEntity supportedBlockchains = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) =
    {description: "List of supported blockchains and networks for the participant. This is used to determine which blockchains and networks the participant can interact with."}
  ];
}

message LendingAgreement {
  string id = 1;
  string lenderParticipantID = 2;
  string borrowerParticipantID = 3;
  string lendingOfferID = 4;
  string amount = 5;
  string currencyID = 6;
  uint64 annualYield = 7;
  string status = 8;
  google.protobuf.Duration duration = 9;
  google.protobuf.Timestamp startLoanDate = 10;
  string workflowID = 11;
  string borrowerSharedAddressID = 12;
  string lenderSharedAddressID = 13;
  repeated LendingAgreementCollateral lendingAgreementCollaterals = 14;
  repeated LendingAgreementTransaction lendingAgreementTransactions = 15;

  google.protobuf.Timestamp createdAt = 16;
  google.protobuf.Timestamp updatedAt = 17;
  string annualYieldMainUnit = 18;
  Currency currencyInfo = 19;
  string amountMainUnit = 20;
  google.protobuf.Timestamp repaymentDueDate = 21;
}

message LendingAgreementCollateral {
  string id = 1;
  string lenderParticipantID = 2;
  string borrowerParticipantID = 3;
  string lendingAgreementID = 4;
  string amount = 5;
  string currencyID = 6;
  string status = 7;
  string pledgeID = 8;
  string sharedAddressID = 9;
  google.protobuf.Timestamp createdAt = 10;
  google.protobuf.Timestamp updatedAt = 11;
  Currency currencyInfo = 12;
  string amountMainUnit = 13;
  string pledgeActionID = 14;
}

message LendingAgreementTransaction {
  string id = 1;
  string lendingAgreementID = 2;
  string amount = 3;
  string currencyID = 4;
  uint64 requestID = 5;
  uint64 transactionID = 6;
  string transactionHash = 7;
  uint64 transactionBlockNumber = 8;
  string type = 9;

  string amountMainUnit = 10;
  Currency currencyInfo = 11;
  google.protobuf.Timestamp createdAt = 12;
  google.protobuf.Timestamp updatedAt = 13;
}

message LendingAgreementAttachment {
  string id = 1;
  string lendingAgreementID = 2;
  string uploaderParticipantID = 3;
  string name = 4;
  string type = 5 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "The type of the file. Example: 'EMBEDDED', 'EXTERNAL_LINK', etc.";
    }
  ];
  string contentType = 6 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "The MIME type of the file. Example: 'application/pdf', 'image/png', etc.";
    }
  ];
  string value = 7 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "The content of the file. For 'EMBEDDED' type, this is the base64 encoded content. For 'EXTERNAL_LINK' type, this is the URL link.";
    }
  ];
  uint64 fileSize = 8 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "The size of the file in bytes. The size is set only if the file type is 'EMBEDDED'.";
    }
  ];
  google.protobuf.Timestamp createdAt = 9;
  google.protobuf.Timestamp updatedAt = 10;
}

message TnLendingOffer {
  string id = 1;
  uint64 annualPercentageYield = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "The interest rate of the to create lending offer, based on 5 decimals. Example: 525000 corresponds to 5.25% annual percentage yield";
    }
  ];
  google.protobuf.Duration duration = 3;
  LendingCollateralRequirement collateralRequirement = 4;
  string participantID = 5;
  string blockchain = 6;
  string network = 7;
  string arg1 = 8;
  string arg2 = 9;
  Currency currencyInfo = 10;
  string annualPercentageYieldMainUnit = 11;

  google.protobuf.Timestamp originCreatedAt = 12;
  google.protobuf.Timestamp createdAt = 13;
  google.protobuf.Timestamp updatedAt = 14;

  string amount = 15;
  string amountMainUnit = 16;
}

message TnLendingOffersDetails {
  repeated TnLendingOfferDetail tnLendingOffersDetails = 1;
}

message TnLendingOfferDetail {
  string id = 1;
  string blockchain = 2;
  string network = 3;
  string arg1 = 4;
  string arg2 = 5;
  uint64 annualPercentageYield = 6 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "The interest rate of the to create lending offer, based on 5 decimals. Example: 525000 corresponds to 5.25% annual percentage yield";
    }
  ];
  google.protobuf.Duration duration = 7;
  LendingCollateralRequirement collateralRequirement = 8;
  google.protobuf.Timestamp originCreatedAt = 9;
  string amount = 10;
}

message LendingCollateralRequirement {
  repeated CurrencyCollateralRequirement acceptedCurrencies = 1;
}

message CurrencyCollateralRequirement {
  string blockchain = 1;
  string network = 2;
  string arg1 = 3;
  string arg2 = 4;
  string ratio = 5 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "The loan to value ratio of the lending offer, based on 2 decimals. Example: 12500 corresponds to my collateral shall be worth 125% of my loan";
    }
  ];
  Currency currencyInfo = 6;
}

message TnParticipantAttributeSpecification {
  string attributeKey = 1;
  string attributeType = 2;
  string attributeDescription = 3; // how to get this value ex. TDX subaccount
}

message TnContactPerson {
  string firstName = 1;
  string lastName = 2;
  string phoneNumber = 3;
  string email = 4;
}

message TnSharedAddress {

  message Trail {
    string id = 1;
    string sharedAddressID = 2;
    string addressStatus = 3;
    string comment = 4;
    google.protobuf.Timestamp createdAt = 5;
  }

  string id = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) =
    {description: "The unique identifier of the shared address (uuid).";}
  ];

  uint64 internalAddressID = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) =
    {description: "Represent the id of a deposit address if your participant is the owner participant of the shared address. internalAddressID and wladdressID can not be set simultaneously.";}
  ];
  uint64 wladdressID = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) =
    {description: "Represent the id of a whitelisted address if your participant is the target participant of the shared address. can be empty if the whitelisted address is not yet created or was rejected. internalAddressID and wladdressID can not be set simultaneously.";}
  ];

  string ownerParticipantId = 4;
  string targetParticipantId = 5;

  string blockchain = 6;
  string network = 7;
  string address = 8;
  string originLabel = 9;

  google.protobuf.Timestamp originCreationDate = 10;
  google.protobuf.Timestamp originDeletionDate = 11;

  google.protobuf.Timestamp createdAt = 12;
  google.protobuf.Timestamp updatedAt = 13;
  google.protobuf.Timestamp targetAcceptedAt = 14;
  string status = 15;
  ProofOfOwnership proofOfOwnership = 16;
  uint64 pledgesCount = 17 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) =
    {description: "Count of active pledges linked to the shared address.";}
  ];
  repeated Trail trails = 18;
}

message TnSharedAsset{

  message Trail {
    string id = 1;
    string sharedAssetID = 2;
    string assetStatus = 3;
    string comment = 4;
    google.protobuf.Timestamp createdAt = 5;
  }

  string id = 1;

  uint64 wlContractAddressID = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) =
    {description: "Represent the id of a whitelisted contract address.";}
  ];

  string ownerParticipantId = 3;
  string targetParticipantId = 4;

  string blockchain = 5;
  string network = 6;
  string name = 7;
  string symbol = 8;
  uint64 decimals = 9;
  string contractAddress = 10;
  string tokenId = 11; // XTZ FA2, ERC721, ERC1155
  enum Kind {
    // Default has an empty string as a representation
    _default_ = 0;
    NFT_AUTO = 1; // Generic representation for NFTs. Upon receiving this, the backend will try to find the best match, and fill it with one of the types below.
    NFT_XTZ_FA2 = 2;
    NFT_ETH_ERC721 = 3 [deprecated = true]; // Use NFT_EVM_ERC721 or NFT_AUTO instead.
    NFT_ETH_ERC1155 = 4 [deprecated = true]; // Use NFT_EVM_ERC1155 or NFT_AUTO instead.
    NFT_EVM_ERC721 = 5;
    NFT_EVM_ERC1155 = 6;
    SOL_TOKEN = 7;
    SOL_TOKEN2022 = 8;
    NFT_EVM_CRYPTOPUNKS = 9;
  }
  string kind = 12;

  google.protobuf.Timestamp originCreationDate = 13;
  google.protobuf.Timestamp originDeletionDate = 14;

  google.protobuf.Timestamp createdAt = 15;
  google.protobuf.Timestamp updatedAt = 16;
  google.protobuf.Timestamp targetAcceptedAt = 17;
  google.protobuf.Timestamp targetRejectedAt = 18;

  string status = 19;
  repeated Trail trails = 20;
}

message ProofOfOwnership {
  SignedProofOfOwnershipPayload signedPayload = 1;
  string signedPayloadHash = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "The hex encoded SHA256 hash of the payload. The SHA256 hash is sliced to take the first 30 bytes out of 32. The total length after hex encoding is 60 characters. This hash will be provided to the proof of reserve challenge concatenated with a 'TN-' Taurus-NETWORK domain prefix."}];
  ProofOfReserve proofOfReserve = 3;
  string signedPayloadAsString = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "The signed payload as a string. This field is used to to obtain the hash."}];
}

message SignedProofOfOwnershipPayload {
  ProofOfOwnershipPayload payload = 1;
  string ownerParticipantSignature = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "Signature of the payload signed by the owner participant."}];
}

message ProofOfOwnershipPayload {
  string ownerParticipantID = 1;
  string targetParticipantID = 2;
  string address = 3;
  string blockchain = 4;
  string network = 5;
}

// Pledges

message TnPledge {

  message Trail {
    string id = 1;
    string pledgeID = 2;
    string addressCommandID = 3;
    string participantID = 4;
    string pledgeAmount = 5;
    string action = 6;
    string comment = 7;
    google.protobuf.Timestamp createdAt = 8;
  }

  message PledgeDurationSetup {
    google.protobuf.Duration minimumDuration = 1 [
      (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        description: "The minimum duration of the pledge. The minimum duration is the time that the pledge must remain active before it can be unpledged. (example 1 month, the owner can't unpledge before one month)"
            "You can either set endOfMinimumDurationDate or minimumDuration.";
      }
    ];
    google.protobuf.Timestamp endOfMinimumDurationDate = 2 [
      (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        description: "The end date of the minimum duration of the pledge. The minimum duration is the time that the pledge must remain active before it can be unpledged."
            "You can either set endOfMinimumDurationDate or minimumDuration.";
      }
    ];

    google.protobuf.Duration noticePeriodDuration = 3 [
      (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        description: "The duration of the notice period occuring after doing an unpledge."
            "When an unpledge is performed, the target participant will be able to perform withdrawals until the end of the notice period. (example 48h after the unpledge)"
            "When this field is not set, the pledge is considered 'At sight', so the owner can unpledge at anytime and the target can't withdraw anymore.";
      }
    ];
    google.protobuf.Timestamp endOfNoticePeriodDate = 4 [
      (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        description: "The end date of the notice period. The notice period is the time that the target participant can perform withdrawals after the unpledge is done by the owner participant."
            "After the end of the notice period, the target participant can't perform withdrawals anymore and the pledge is considered 'UNPLEDGED'. This field is set once an unpledge action is performed.";
      }
    ];
  }

  message PledgeAttribute {
    string id = 1;
    string key = 2;
    string value = 3;
    string owner = 4;
    string type = 5;
    string subtype = 6;
    string contentType = 7;
    bool isTaurusNetworkShared = 8;
  }

  string id = 1;
  string sharedAddressID = 2;
  string ownerParticipantID = 3;
  string targetParticipantID = 4;
  string currencyID = 5;
  string blockchain = 6;
  string network = 7;
  string arg1 = 8;
  string arg2 = 9;
  string amount = 10;
  string status = 11;
  string pledgeType = 12;
  repeated Trail trails = 13;
  google.protobuf.Timestamp originCreationDate = 14;
  PledgeDurationSetup durationSetup = 15;
  google.protobuf.Timestamp unpledgeDate = 16;
  repeated PledgeAttribute attributes = 17;
  google.protobuf.Timestamp createdAt = 18;
  google.protobuf.Timestamp updatedAt = 19;
  string externalReferenceId = 20;
  string reconciliationNote = 21;
  string direction = 22; // INCOMING or OUTGOING

  uint64 wladdressID = 23 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) =
    {description: "Represent the id of a whitelisted address if your participant is the target participant of the pledge. internalAddressID and wladdressID can not be set simultaneously.";}
  ];
}

message TnPledgeWithdrawal {

  message Trail {
    string id = 1;
    string pledgeWithdrawalID = 2;
    string addressCommandID = 3;
    string participantID = 4;
    string action = 5;
    string comment = 6;
    google.protobuf.Timestamp createdAt = 7;
  }

  string id = 1;
  string pledgeID = 2;
  string destinationSharedAddressID = 3;
  string amount = 4;
  string status = 5;
  string txHash = 6;
  uint64 txID = 7;
  uint64 requestID = 8;
  uint64 txBlockNumber = 9;
  repeated Trail trails = 10;
  google.protobuf.Timestamp createdAt = 11;
  string initiatorParticipantID = 12;
  string externalReferenceID = 13;

}

message TnPledgeAction {

  message Trail {
    string id = 1;
    string pledgeActionID = 2;
    uint64 userID = 3;
    string externalUserID = 4;
    string action = 5;
    string comment = 6;
    google.protobuf.Timestamp createdAt = 7;
  }

  string id = 1;
  string pledgeID = 2;
  string actionType = 3;
  string status = 4;
  Metadata metadata = 5;
  string rule = 6;
  Approvers approvers = 7;
  repeated string needsApprovalFrom = 8;
  google.protobuf.Timestamp createdAt = 9;
  google.protobuf.Timestamp lastApprovalDate = 10;
  string envelope = 11;
  repeated Trail trails = 12;
  string pledgeWithdrawalID = 13;
}

message TnSettlementAssetTransfer {
  string currencyID = 1;
  string amount = 2;
  string sourceSharedAddressID = 3;
  string destinationSharedAddressID = 4;
}

message TnSettlementClipTransaction {
  string id = 1;
  TnSettlementAssetTransfer assetTransfer = 2;
  uint64 requestID = 3;
  Metadata requestMetadata = 4;
  string txHash = 5;
  uint64 txID = 6;
  uint64 txBlockNumber = 7;
  string status = 8;
  google.protobuf.Timestamp createdAt = 9;
  string workflowID = 10;
}

message TnSettlementClip {
  string id = 1;
  uint64 index = 2;
  repeated TnSettlementClipTransaction firstLegTransactions = 3;
  repeated TnSettlementClipTransaction secondLegTransactions = 4;
  string status = 5;
  string workflowID = 6;
}


message TnSettlement {
  string id = 1;
  string creatorParticipantID = 2;
  string targetParticipantID = 3;
  string firstLegParticipantID = 4;
  repeated TnSettlementAssetTransfer firstLegAssets = 5;
  repeated TnSettlementAssetTransfer secondLegAssets = 6;
  repeated TnSettlementClip clips = 7;
  google.protobuf.Timestamp startExecutionDate = 8;
  string status = 9;
  google.protobuf.Timestamp createdAt = 10;
  google.protobuf.Timestamp updatedAt = 11;
  string workflowID = 12;
}