syntax = "proto3";

package tgvalidatord;

import "audit.proto";
import "cursor.proto";

import "google/rpc/status.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

import "protoc-gen-openapiv2/options/annotations.proto";

option java_package = "com.taurushq.sdk.protect.proto.v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "tg-validatord audit service";
    version: "1.0";
    contact: {
      name: "tg-validatord audit service";
      url: "https://github.com/taurusgroup/tg-validatord";
      email: "development@taurusgroup.ch";
    };
  };
  consumes: "application/json";
  produces: "application/json";
  schemes: [HTTP, HTTPS];
  security_definitions: {
    security: {
      key: "Bearer";
      value: {
        type: TYPE_API_KEY;
        in: IN_HEADER;
        name: "Authorization";
      }
    }
  }
  security: {
    security_requirement: {
      key: "Bearer";
      value: {};
    }
  }
  responses: {
    key: "401";
    value: {
      description: "Returned when the user is not authenticated.";
      schema: {
        json_schema: {
          ref: ".google.rpc.Status"
        }
      }
    }
  }
  responses: {
    key: "403";
    value: {
      description: "Returned when the user is not authorized to access the resource.";
      schema: {
        json_schema: {
          ref: ".google.rpc.Status"
        }
      }
    }
  }
  responses: {
    key: "404";
    value: {
      description: "Returned when the resource does not exist.";
      schema: {
        json_schema: {
          type: STRING;
        }
      }
    }
  }
};

message GetAuditTrailsRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    example: "{\"externalUserId\": \"team1@bank.com\", \"entities\": [\"wallet\", \"address\", \"user\"], \"actions\": [\"create\", \"delete\", \"update\"], \"creationDateFrom\": \"2022-11-22T08:43:51+00:00\", \"creationDateTo\": \"2022-11-22T09:43:51+00:00\", \"cursor\": {\"currentPage\": \"\", \"pageRequest\": \"FIRST\", \"pageSize\": 128}, \"sorting\": {\"sortBy\": [\"creationDate\"], \"sortOrder\": \"DESC\"}}"
  };

  message Sorting {
    // The columns to order by.
    // Can be `CreationDate` (default)
    repeated string sortBy = 1;
    // Can be `DESC` (default), `ASC`
    string sortOrder = 2;
  }

  google.protobuf.StringValue externalUserId = 1;
  repeated string entities = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "The entities for which to get audit trails (defaults to all).";
    }
  ];
  repeated string actions = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "The actions for which to get audit trails (defaults to all).";
    }
  ];
  google.protobuf.Timestamp creationDateFrom = 4;
  google.protobuf.Timestamp creationDateTo = 5;
  RequestCursor cursor = 6 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "The pagination cursor. Note that the maximum page size is 300.";
    }
  ];
  Sorting sorting = 7;
}

message GetAuditTrailsReply {
  repeated AuditTrail result = 1;
  ResponseCursor cursor = 2;
}

message ExportAuditTrailsRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    example: "{\"externalUserId\": \"team1@bank.com\", \"entities\": [\"wallet\", \"address\", \"user\"], \"actions\": [\"create\", \"delete\", \"update\"], \"creationDateFrom\": \"2022-11-22T08:43:51+00:00\", \"creationDateTo\": \"2022-11-22T09:43:51+00:00\"}"
  };

  google.protobuf.StringValue externalUserId = 1;
  repeated string entities = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "The entities for which to get audit trails (defaults to all).";
    }
  ];
  repeated string actions = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "The actions for which to get audit trails (defaults to all).";
    }
  ];
  google.protobuf.Timestamp creationDateFrom = 4;
  google.protobuf.Timestamp creationDateTo = 5;
  string format = 6 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Desired output format. Can be either 'csv' or 'json'.";
    }
  ];
}

message ExportAuditTrailsReply {
  string result = 1;
  uint64 totalItems = 2;
}

service AuditService {
  rpc GetAuditTrails(GetAuditTrailsRequest) returns (GetAuditTrailsReply) {
    option (google.api.http) = {
      get: "/api/rest/v1/audit_trails"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get audit trails";
      description: "This endpoint returns audit trails for the given tenant, entities, actions, and date range.";
      tags: "Audit";
      responses: {
        key: "400",
        value: {
          description: "Returned when the tenant ID was not found in the JWT.";
          schema: {
            json_schema: {
              ref: ".google.rpc.Status"
            }
          }
        }
      }
      responses: {
        key: "500",
        value: {
          description: "Returned when the service encountered an error."
          schema: {
            json_schema: {
              ref: ".google.rpc.Status"
            }
          }
        }
      }
    };
  };

  rpc ExportAuditTrails (ExportAuditTrailsRequest) returns (ExportAuditTrailsReply) {
    option (google.api.http) = {
      get: "/api/rest/v1/audit_trails/export"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Export audit trails";
      description: "This endpoint exports a list of audit trails as CSV. Note that only a maximum of 10000 trails are exportable at any one time.";
      tags: "Audit";
      responses: {
        key: "400",
        value: {
          description: "Returned when the tenant ID was not found in the JWT.";
          schema: {
            json_schema: {
              ref: ".google.rpc.Status"
            }
          }
        }
      }
      responses: {
        key: "500",
        value: {
          description: "Returned when the service encountered an error."
          schema: {
            json_schema: {
              ref: ".google.rpc.Status"
            }
          }
        }
      }
    };
  };
}
